# paladin

./: Cargo.toml  README.md
PALADIN/: README.MD
assets/: paladin_contextv2.json
crates/paladin-ai/: Cargo.toml
crates/paladin-ai/src/: client.rs  lib.rs  prompt.rs
crates/paladin-cli/: Cargo.toml
crates/paladin-cli/src/: logging.rs  main.rs  ui.rs
crates/paladin-cli/src/commands/: chart.rs  chat.rs  completions.rs  config.rs  data.rs  doctor.rs  gui.rs  mod.rs  signal.rs  update.rs
crates/paladin-core/: Cargo.toml
crates/paladin-core/src/: candle.rs  config.rs  error.rs  features.rs  indicators.rs  lib.rs  paths.rs  signal.rs
crates/paladin-data/: Cargo.toml
crates/paladin-data/src/: lib.rs
crates/paladin-gui/: Cargo.toml
crates/paladin-gui/src/: app.rs  bin.rs  lib.rs
