[package]
name = "paladin-ai"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
paladin-core = { path = "../paladin-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
reqwest.workspace = true
futures.workspace = true
futures-util.workspace = true
bytes.workspace = true
tracing.workspace = true
