[package]
name = "paladin-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "paladin"
path = "src/main.rs"

[dependencies]
paladin-core = { path = "../paladin-core" }
paladin-data = { path = "../paladin-data" }
paladin-ai = { path = "../paladin-ai" }
paladin-gui = { path = "../paladin-gui" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
chrono.workspace = true
tokio.workspace = true
futures.workspace = true
futures-util.workspace = true
clap.workspace = true
clap_complete.workspace = true
indicatif.workspace = true
console.workspace = true
inquire.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
directories.workspace = true
