[package]
name = "paladin-data"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
paladin-core = { path = "../paladin-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio.workspace = true
yahoo_finance_api.workspace = true
time.workspace = true
tracing.workspace = true
