[package]
name = "paladin-gui"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "paladin-gui"
path = "src/bin.rs"

[dependencies]
paladin-core = { path = "../paladin-core" }
paladin-data = { path = "../paladin-data" }
paladin-ai = { path = "../paladin-ai" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
eframe = { version = "0.28", default-features = false, features = ["default_fonts", "glow", "persistence"] }
egui = "0.28"
egui_plot = "0.28"
